--- a/fendo-SSM/pom.xml
+++ b/fendo-SSM/pom.xml
@@ -41,11 +41,12 @@
 </dependency>
  <!--  MySQL依赖 end  -->
  <!--  加入MyBatis 依赖 start  -->
-<dependency>
-<groupId>org.mybatis</groupId>
-<artifactId>mybatis</artifactId>
-<version>3.2.5</version>
-</dependency>
+ 
+ <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.4.1</version>
+    </dependency>
  <!--  加入MyBatis 依赖 end  -->
  <!--  日志文件管理包  -->
  <!--  log start  -->
@@ -180,7 +181,12 @@
 
 
 <!-- 映入JSON -->  
-
+ <dependency>
+    <groupId>com.alibaba</groupId>
+    <artifactId>fastjson</artifactId>
+    <version>1.1.15</version>
+</dependency>
+ 
    <dependency>  
             <groupId>org.codehaus.jackson</groupId>  
             <artifactId>jackson-mapper-asl</artifactId>  
@@ -236,8 +242,18 @@
             <artifactId>commons-codec</artifactId>  
             <version>1.9</version>  
         </dependency>  
-            
+           
+           <dependency>  
+    			<groupId>org.mybatis.generator</groupId>  
+    			 <artifactId>mybatis-generator-core</artifactId>  
+    			<version>1.3.2</version>  
+ 		</dependency>  
        
+      <dependency>
+    	<groupId>org.aspectj</groupId>
+    	<artifactId>aspectjweaver</artifactId>
+    	<version>1.8.13</version>
+	</dependency>
 </dependencies>
 <build>
 <finalName>fendo-SSM</finalName>
